exports[`(.not).toHaveUpgradeRequiredStatus > using axios > .not.toHaveUpgradeRequiredStatus > fails when response have status code 426 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUpgradeRequiredStatus()</intensity>

Expected status code to not be 426 received:
  <red>426</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 426,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUpgradeRequiredStatus > using axios > .toHaveUpgradeRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUpgradeRequiredStatus()</intensity>

Expected status code to be 426 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUpgradeRequiredStatus > using got > .not.toHaveUpgradeRequiredStatus > fails when response have status code 426 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUpgradeRequiredStatus()</intensity>

Expected status code to not be 426 received:
  <red>426</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 426,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveUpgradeRequiredStatus > using got > .toHaveUpgradeRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUpgradeRequiredStatus()</intensity>

Expected status code to be 426 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
